[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codesage"
version = "1.0.0"
description = "AI Codebase Intelligence System - Local AI engine for understanding codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Dhruv" }
]

dependencies = [
    # API Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    
    # AST Parsing
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    
    # Graph Database
    "neo4j>=5.17.0",
    
    # Vector Database
    "qdrant-client>=1.7.0",
    
    # ML / Embeddings
    "torch>=2.2.0",
    "sentence-transformers>=2.5.0",
    "transformers>=4.38.0",
    
    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
codesage = "codesage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["codesage"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
